--- a/src/content/graphos/explorer/embed-explorer.mdx
+++ b/src/content/graphos/explorer/embed-explorer.mdx
@@ -58,7 +58,7 @@ For more information, see the [landing page plugin API reference](/apollo-server
 
 5. Still in the dialog, use the tabs above the code snippet to select the snippet for your use case:
 
-    - Use **React** for React apps where you can `npm install` the `@apollo/explorer` package.
+    - Use **React** for React apps where you can `npm install` the `@apollo/explorer` package. You will need to install the optional dependency `use-deep-compare-effect` to use the React package.
     - Use **JavaScript** for non-React JavaScript apps where you can `npm install` the `@apollo/explorer` package.
     - Use **Built file on CDN** to use Apollo's CDN-hosted embedded Explorer.
 
