--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -39,6 +39,8 @@ When you open Sandbox, it automatically attempts to connect to a GraphQL server 
   width="300"
 />
 
+You can also change the default endpoint by providing a [URL parameter](#url-parameters).
+
 > To try out Sandbox with an example GraphQL API, you can set the URL to:
 >
 > ```
@@ -120,6 +122,43 @@ Sandbox automatically reconnects whenever your internet connection is restored. 
 ## Operation collections in Sandbox
 
 See [this section](./operation-collections/#sandbox-collections).
+
+## URL parameters
+
+You can provide URL parameters to Sandbox to customize its initial state on page load. This can help users get started with Sandbox more quickly when opening Sandbox from a link.
+
+The following URL parameters are supported:
+
+| Parameter   | Description                                                                                                                  |
+|-------------|------------------------------------------------------------------------------------------------------------------------------|
+| `endpoint`  | The URL of the GraphQL endpoint that Sandbox introspects and sends requests to. The default value is `http://localhost:4000` |
+| `document`  | A GraphQL operation to populate in the Explorer's editor on load.                                                            |
+| `variables` | A serialized JSON object containing initial variable values to populate in the Explorer on load.                             |
+| `headers`   | A serialized JSON object containing initial HTTP header values to populate in the Explorer on load.                          |
+
+For example, the following URL sets all supported parameters:
+
+```
+https://studio.apollographql.com/sandbox/explorer?endpoint=http://localhost:4200&document=query hello($name: String!) { hello(name: $name)}&variables={"name": "Sandbox User"}&headers={"Cache-Control": "no-cache"}
+```
+
+> Note that for readability, the above URL is not URL-encoded. Most browsers automatically encode the URL for you, but it's a best practice to URL-encode parameter values before providing them to a user.
+
+The example URL above opens Sandbox with the following initial state:
+
+<img
+    class="screenshot"
+    src="../img/sandbox-url-parameters-1.jpg"
+    alt="Sandbox with endpoint, document, and variables pre-populated"
+    width="500"
+/>
+
+<img
+    class="screenshot"
+    src="../img/sandbox-url-parameters-2.jpg"
+    alt="Sandbox with headers pre-populated"
+    width="500"
+/>
 
 ## Embedding Sandbox
 
