[technote] Fix broken link

--- a/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
+++ b/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
@@ -8,7 +8,7 @@ Testing in GraphQL may seem like it can involve more steps, but that is because 
 
 - [Unit testing](#unit-testing) in individual subgraphs
 - [Integration testing](#integration-testing) for the individual subgraphs
-- [End-to-end testing](#end-to-end testing) for your entire supergraph
+- [End-to-end testing](#end-to-end-testing) for your entire supergraph
 - [Composition testing](#composition-testing) for supergraph schema generation
 - [Component and operation testing](#component-and-operation-testing) for your clients
 
