Add new error type

--- a/src/content/graphos/delivery/contracts.mdx
+++ b/src/content/graphos/delivery/contracts.mdx
@@ -420,6 +420,7 @@ Whenever Apollo Studio attempts to create or update your contract schema, it mig
 | `TO_API_SCHEMA`                            | Studio encountered an error while attempting to generate an API schema from the contract variant's supergraph schema.              |
 | `TO_FILTER_SCHEMA`                         | Studio failed to generate and return a contract supergraph schema for an unknown reason.                                           |
 | `UNKNOWN`                                  | An unknown error occurred.                                                                                                         |
+| `UNREACHABLE_TYPE_MASKING`                 | Studio encountered an error while attempting to exclude unreachable types in the resulting contract schema.                         |
 | `VERSION_CHECK`                            | The Federation version used is not supported by contracts.                                                                         |
 
 ## Rules for `@tag`s and contracts
