--- a/src/content/technotes/TN0001-client-id-enforcement.mdx
+++ b/src/content/technotes/TN0001-client-id-enforcement.mdx
@@ -25,36 +25,30 @@ function clientEnforcementPlugin(): ApolloServerPlugin<BaseContext> {
     async requestDidStart() {
       return {
         async didResolveOperation(requestContext) {
-          let clientName = requestContext.request.http.headers.get(
+          const clientName = requestContext.request.http.headers.get(
             "apollographql-client-name"
           );
-          let clientVersion = requestContext.request.http.headers.get(
+          const clientVersion = requestContext.request.http.headers.get(
             "apollographql-client-version"
           );
 
           if (!clientName) {
-            let logString = `Execution Denied: Operation has no identified client`;
+            const logString = `Execution Denied: Operation has no identified client`;
             requestContext.logger.debug(logString);
             throw new GraphQLError(logString);
           }
 
           if (!clientVersion) {
-            let logString = `Execution Denied: Client ${clientName} has no identified version`;
+            const logString = `Execution Denied: Client ${clientName} has no identified version`;
             requestContext.logger.debug(logString);
             throw new GraphQLError(logString);
           }
 
           if (!requestContext.operationName) {
-            let logString = `Unnamed Operation: ${requestContext.queryHash}. All operations must be named`;
+            const logString = `Unnamed Operation: ${requestContext.queryHash}. All operations must be named`;
             requestContext.logger.debug(logString);
 
-            throw new GraphQLError(logString, {
-              extensions: {
-                queryHash: requestContext.queryHash,
-                clientName,
-                clientVersion,
-              },
-            });
+            throw new GraphQLError(logString);
           }
         },
       };
