--- a/src/content/graphos/routing/cloud.mdx
+++ b/src/content/graphos/routing/cloud.mdx
@@ -59,6 +59,10 @@ When you first create your variant, the router provisioning process can take a f
 
 See [Configuring cloud routing](./cloud-configuration).
 
+## Cloud Launches
+
+Publishing new schema or editing router config will trigger a new [Launch](/graphos/delivery/launches/). Launches automatically deploy new infrastructure for cloud routing. Occasionally these deploys may fail due to a platform incident or schema composition issues. Republishing your schema may fix this.
+
 ## Cloud routing FAQ
 
 #### What happens if my cloud router goes down?
