--- a/src/content/technotes/TN0029-relay-style-connections.mdx
+++ b/src/content/technotes/TN0029-relay-style-connections.mdx
@@ -1,5 +1,5 @@
 ---
-title: Relay-style connections FAQ
+title: Relay-style connections and pagination FAQ
 id: TN0029
 tags: [best practices, schema design]
 ---
@@ -103,7 +103,7 @@ No, unless you're using the Relay client. But its popularity outside of the Rela
 
 Consider the ["Zero, One, Infinity" rule](https://en.wikipedia.org/wiki/Zero_one_infinity_rule) — can you definitively assert that your list will never require pagination or other metadata about the relationship?
 
-Apollo recommends always using a wrapper type for lists so that you can gracefully evolve your schema without breaking existing clients.
+Using a wrapper type for lists allows you to gracefully evolve your schema without breaking existing clients.
 
 ### Do I have to implement the entire connection specification?
 
